error.txt
   Compiling onu_refactor v0.1.0 (/home/dbslim/onu_expirement/onu_refactor)
warning: unused import: `AnyValue`
  --> src/adapters/codegen/strategies.rs:16:23
   |
16 | use inkwell::values::{AnyValue, AsValueRef, BasicValueEnum, CallableValue, PointerValue};
   |                       ^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::domain::entities::types::OnuType`
  --> src/adapters/codegen/mod.rs:14:5
   |
14 | use crate::domain::entities::types::OnuType;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `BasicTypeEnum`
  --> src/adapters/codegen/mod.rs:18:33
   |
18 | use inkwell::types::{BasicType, BasicTypeEnum};
   |                                 ^^^^^^^^^^^^^

warning: unused import: `ParserPort`
 --> src/application/use_cases/stages/parse_stage.rs:2:49
  |
2 | use crate::application::ports::compiler_ports::{ParserPort, Token};
  |                                                 ^^^^^^^^^^

warning: unused import: `MirInstruction`
 --> src/application/use_cases/stdlib/joined_with.rs:1:36
  |
1 | use crate::domain::entities::mir::{MirInstruction, MirOperand, MirLiteral, MirBinOp};
  |                                    ^^^^^^^^^^^^^^

warning: unused import: `MirInstruction`
 --> src/application/use_cases/stdlib/as_text.rs:4:15
  |
4 |     MirBinOp, MirInstruction, MirLiteral, MirOperand, MirTerminator,
  |               ^^^^^^^^^^^^^^

warning: unused import: `MirLiteral`
 --> src/application/use_cases/stdlib/duplicated_as.rs:1:64
  |
1 | use crate::domain::entities::mir::{MirInstruction, MirOperand, MirLiteral};
  |                                                                ^^^^^^^^^^

warning: unused imports: `MirBinOp`, `MirInstruction`, and `MirLiteral`
 --> src/application/use_cases/stdlib/set_char.rs:1:36
  |
1 | use crate::domain::entities::mir::{MirInstruction, MirOperand, MirLiteral, MirBinOp};
  |                                    ^^^^^^^^^^^^^^              ^^^^^^^^^^  ^^^^^^^^

warning: unused import: `MirLiteral`
 --> src/application/use_cases/stdlib/char_at.rs:3:48
  |
3 | use crate::domain::entities::mir::{MirOperand, MirLiteral};
  |                                                ^^^^^^^^^^

warning: unused import: `MirLiteral`
 --> src/application/use_cases/stdlib/len.rs:2:48
  |
2 | use crate::domain::entities::mir::{MirOperand, MirLiteral};
  |                                                ^^^^^^^^^^

warning: unused imports: `MirArgument` and `MirOperand`
  --> src/application/use_cases/tco_pass.rs:27:17
   |
27 |     BasicBlock, MirArgument, MirFunction, MirInstruction, MirOperand, MirProgram, MirTerminator,
   |                 ^^^^^^^^^^^                               ^^^^^^^^^^

warning: unused imports: `MirInstruction` and `MirOperand`
 --> src/domain/rules/droppolicy.rs:1:36
  |
1 | use crate::domain::entities::mir::{MirInstruction, MirOperand};
  |                                    ^^^^^^^^^^^^^^  ^^^^^^^^^^

warning: unused import: `crate::application::use_cases::mir_builder::MirBuilder`
 --> src/domain/rules/droppolicy.rs:2:5
  |
2 | use crate::application::use_cases::mir_builder::MirBuilder;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
   --> src/adapters/parser/mod.rs:210:13
    |
210 |         let mut behaviors = Vec::new();
    |             ----^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `continue_cmp`
   --> src/adapters/codegen/strategies.rs:165:29
    |
165 |                         let continue_cmp = builder
    |                             ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_continue_cmp`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `found_match`
   --> src/adapters/codegen/strategies.rs:172:29
    |
172 |                         let found_match = builder.build_and(char_eq, done, "found_match").unwrap();
    |                             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_found_match`

warning: unused variable: `not_match`
   --> src/adapters/codegen/strategies.rs:175:29
    |
175 |                         let not_match = builder.build_not(char_eq, "not_match").unwrap();
    |                             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_not_match`

warning: unused variable: `module`
  --> src/adapters/codegen/strategies.rs:37:9
   |
37 |         module: &Module<'ctx>,
   |         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_module`

warning: unused variable: `registry`
  --> src/adapters/codegen/strategies.rs:39:9
   |
39 |         registry: &RegistryService,
   |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_registry`

warning: unused variable: `module`
   --> src/adapters/codegen/strategies.rs:356:9
    |
356 |         module: &Module<'ctx>,
    |         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_module`

warning: unused variable: `registry`
   --> src/adapters/codegen/strategies.rs:358:9
    |
358 |         registry: &RegistryService,
    |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_registry`

warning: unused variable: `registry`
   --> src/adapters/codegen/strategies.rs:447:9
    |
447 |         registry: &RegistryService,
    |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_registry`

warning: unused variable: `registry`
   --> src/adapters/codegen/strategies.rs:484:9
    |
484 |         registry: &RegistryService,
    |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_registry`

warning: unused variable: `registry`
   --> src/adapters/codegen/strategies.rs:579:9
    |
579 |         registry: &RegistryService,
    |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_registry`

warning: unused variable: `registry`
   --> src/adapters/codegen/strategies.rs:637:9
    |
637 |         registry: &RegistryService,
    |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_registry`

warning: unused variable: `registry`
   --> src/adapters/codegen/strategies.rs:721:9
    |
721 |         registry: &RegistryService,
    |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_registry`

warning: unused variable: `elem_type`
   --> src/adapters/codegen/strategies.rs:821:21
    |
821 |                 let elem_type = if let Some(typ) = builder
    |                     ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_elem_type`

warning: unused variable: `registry`
   --> src/adapters/codegen/strategies.rs:800:9
    |
800 |         registry: &RegistryService,
    |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_registry`

warning: unused variable: `f`
   --> src/adapters/codegen/strategies.rs:824:32
    |
824 |                     .and_then(|f| {
    |                                ^ help: if this is intentional, prefix it with an underscore: `_f`

error[E0382]: use of partially moved value: `inst`
   --> src/application/use_cases/memo_strategies/compound_memo_strategy.rs:305:28
    |
161 |             for inst in block.instructions {
    |                 ---- this reinitialization might get skipped
...
168 |                     arg_types,
    |                     --------- value partially moved here
...
305 |                 insts.push(inst);
    |                            ^^^^ value used here after partial move
    |
    = note: partial move occurs because value has type `Vec<OnuType>`, which does not implement the `Copy` trait
help: borrow this binding in the pattern to avoid moving the value
    |
168 |                     ref arg_types,
    |                     +++

For more information about this error, try `rustc --explain E0382`.
warning: `onu_refactor` (lib) generated 29 warnings
error: could not compile `onu_refactor` (lib) due to 1 previous error; 29 warnings emitted
